exports[`borderWidth properly applies a value when passed only one 1`] = `
Object {
  "border-bottom-width": "12px",
  "border-left-width": "12px",
  "border-right-width": "12px",
  "border-top-width": "12px",
}
`;

exports[`borderWidth properly applies values when passed four 1`] = `
Object {
  "border-bottom-width": "36px",
  "border-left-width": "48px",
  "border-right-width": "24px",
  "border-top-width": "12px",
}
`;

exports[`borderWidth properly applies values when passed three 1`] = `
Object {
  "border-bottom-width": "36px",
  "border-left-width": "24px",
  "border-right-width": "24px",
  "border-top-width": "12px",
}
`;

exports[`borderWidth properly applies values when passed two 1`] = `
Object {
  "border-bottom-width": "12px",
  "border-left-width": "24px",
  "border-right-width": "24px",
  "border-top-width": "12px",
}
`;
